tests/machine/x/cpp/map_membership.mochi.error
line 6: ../../../tests/machine/x/cpp/map_membership.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/map_membership.mochi.cpp:6:28: error: request for member ‘begin’ in ‘"a"’, which is of non-class type ‘const char [2]’
    6 |         (cout << (find("a".begin(), "a".end(), m) != "a".end()));
      |                            ^~~~~
../../../tests/machine/x/cpp/map_membership.mochi.cpp:6:41: error: request for member ‘end’ in ‘"a"’, which is of non-class type ‘const char [2]’
    6 |         (cout << (find("a".begin(), "a".end(), m) != "a".end()));
      |                                         ^~~
../../../tests/machine/x/cpp/map_membership.mochi.cpp:6:58: error: request for member ‘end’ in ‘"a"’, which is of non-class type ‘const char [2]’
    6 |         (cout << (find("a".begin(), "a".end(), m) != "a".end()));
      |                                                          ^~~
../../../tests/machine/x/cpp/map_membership.mochi.cpp:7:28: error: request for member ‘begin’ in ‘"c"’, which is of non-class type ‘const char [2]’
    7 |         (cout << (find("c".begin(), "c".end(), m) != "c".end()));
      |                            ^~~~~
../../../tests/machine/x/cpp/map_membership.mochi.cpp:7:41: error: request for member ‘end’ in ‘"c"’, which is of non-class type ‘const char [2]’
    7 |         (cout << (find("c".begin(), "c".end(), m) != "c".end()));
      |                                         ^~~
../../../tests/machine/x/cpp/map_membership.mochi.cpp:7:58: error: request for member ‘end’ in ‘"c"’, which is of non-class type ‘const char [2]’
    7 |         (cout << (find("c".begin(), "c".end(), m) != "c".end()));
      |                                                          ^~~

  5 | 	auto m = unordered_map<string,int>{{"a", 1}, {"b", 2}};
  6 | 	(cout << (find("a".begin(), "a".end(), m) != "a".end()));
  7 | 	(cout << (find("c".begin(), "c".end(), m) != "c".end()));
